# sic-epitaxy-thickness-modeling

./: .gitignore  01_问题一_双光束干涉厚度模型.md  02_问题二_SiC厚度计算与运行结果.md  03_问题三_多光束判定与Si厚度结果.md  04_问题四_SiC多光束修正与可靠性.md  05_仓库完整目录与文件说明.md  2025国赛B题_建模与算法大纲.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
LaTeX/: cumcmthesis.cls  main.tex  refer.bib
configs/: base.yaml  q2_sic.yaml  q3_si.yaml  synthetic_si.yaml  synthetic_sic.yaml
data/processed/: processed_si_10deg.csv  processed_si_15deg.csv  processed_sic_10deg.csv  processed_sic_15deg.csv
data/raw/: README.md
docs/: completion_checklist.md  experiment_plan.md  final_experiment_scheme.md  final_result_assessment.md  model_to_code_mapping.md  parameter_dictionary.md  problem1_derivation.md  refractive_index_sources.md  result_interpretation.md  result_table_template.md  validation_report.md
outputs/reports/: actual_data_summary.md  all_results.json  final_results.md  q2_sic_summary.json  q3_si_summary.json
outputs/tables/: final_preliminary_results.csv  final_results.csv  harmonics_si_10deg.csv  harmonics_si_15deg.csv  harmonics_sic_10deg.csv  harmonics_sic_15deg.csv  q2_sic_band_stability.csv  q2_sic_bootstrap.csv  q2_sic_model_comparison.csv  q2_sic_sensitivity.csv  (+8 more)
scripts/: generate_synthetic.py  run_all.py  run_q2_sic.py  run_q3_si.py  smoke_test.py
tests/: test_bootstrap_utils.py  test_fft_init.py  test_final_estimator.py  test_hilbert.py  test_joint_harmonic.py  test_multibeam_assessment.py  test_peak_regression.py  test_refractive_index.py  test_tmm.py
(+93 files in other folders)
