[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epitaxy-thickness"
version = "0.1.0"
description = "Infrared interference inversion for SiC/Si epitaxial-layer thickness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
epitaxy = "epitaxy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
